force-app/main/default/objects/Employee_Classes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Class_Description__c</fullName>
        <label>Class Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_ID__c</fullName>
        <label>Class ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Type__c</fullName>
        <label>Class Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Employee Classes</label>
</CustomObject>